--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@mdi/font": "^7.4.47",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.5",
+    "vue": "^3.5.13",
+    "vuetify": "^3.7.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
