--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vuetify": "^3.7.12"
   },
   "devDependencies": {
